@@ -1,8 +1,35 @@
 =STANDORTE=
 
+==RealURL==
+'fakultaet' => array(
+					array(
+						'GETvar' => 'tx_standorte_pi1[fakultaetUid]',
+						'lookUpTable' => array(
+							'table' => 'tx_standorte_domain_model_fakultaet',
+							'id_field' => 'uid',
+							'alias_field' => 'titel',
+							'maxLength' => 50,
+							'addWhereClause' => 'AND NOT deleted',
+							'useUniqueCache' => 1,
+							'useUniqueCache_conf' => array(
+								'strtolower' => 1,
+								'spaceCharacter' => '_',
+							),
+						),
+					),
+					array(
+						'GETvar' => 'tx_standorte_pi1[action]'
+					),
+					array(
+						'GETvar' => 'tx_standorte_pi1[controller]'
+					),
+				),
+
 ==TODO==
 * Besonderheiten bei Oeffnungszeiten
 ** Semesterferien
 ** Freitext ... (FLUIDs sache)
 
 * Google Maps integration
+
+* IRRE soll nicht immer neu laden
